# welcomebot

./: .gitignore  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  welcomebot.dockerfile
docker/: copypaste.dockerfile  welcomebot.dockerfile
src/welcomebot/: __init__.py  __main__.py  cnc.py  groups.py  main.py  motd.py  store.py  util.py
tests/: cnc_test.py  motd_test.py  store_test.py
