[project]
name = "welcomebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "pysignalclirestapi",
    "signalbot>=0.25.0",
]

[tool.uv.sources]
pysignalclirestapi = { git = "https://github.com/bbernhard/pysignalclirestapi.git" }
