[project]
name = "welcomebot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "signalbot>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
welcomebot = "welcomebot:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
