[project]
name = "welcomebot"
version = "0.1.5"
authors = [
  {name = "Chris Wren", email = "chris+github@drwren.com"},
]
maintainers = [
  {name = "Chris Wren", email = "chris+github@drwren.com"},
]
description = "monitor signal chat groups and post a message when people join"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "signalbot>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
welcomebot = "welcomebot:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
